# gtcf-oncology-verification1

./: .gitignore  README.md  RESULTS.md  fetch_structures.py  geometry.py  pdb_utils.py  pyproject.toml  requirements.txt  test_pipeline.py  topology.py  verify_theorem1.py  verify_theorem2.py
.github/workflows/: python-app.yml
